welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:2: error: not found: value max
  return max(Math.abs(10-a),Math.abs(10-b));
         ^