welcome.lessons.welcome.bat.bool1.Close10.scala.code
def close10(a:Int, b:Int): Int = {
  return max(Math.abs(10-a),Math.abs(10-b));
}